--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongoose": "^5.10.7",
     "next": "9.5.3",
+    "next-connect": "^0.9.0",
     "react": "16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.5.27",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.50",
+    "typescript": "^4.0.3"
   }
 }
