--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "mongoose": "^5.10.7",
     "next": "9.5.3",
     "next-connect": "^0.9.0",
